# classification-algorithms

./: .gitignore  README.md  axo-endpoint.yml  deploy_endpoint.sh  deploy_storage.sh  pyproject.toml  storage.yml
.github/workflows/: run_test.yml
Algorithms/: DecissionTree.py  Knn.py  Randomforest.py  RegressionLineal.py  RegressionLogistic.py  XGBosst.py  naive_bayes.py  perceptron_multicapa.py  perceptron_simple.py  svm.py
benchmark/: benchmark.py  benchmark_analysis.py
classification_algorithms/: Knn.py  Randomforest.py  XGBosst.py  decission_tree.py  knn.py  linear_regression.py  logistic_regression.py  naive_bayes.py  random_forest.py  svm.py  xgboost.py
classification_algorithms/perceptron/: __init__.py  multi_layer.py  multicapa.py  perceptron.py
tests/: test_Knn.py  test_Random_forest.py  test_XGBosst.py  test_decission_tree.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_multi_layer.py  test_naive_bayes.py  test_perceptron.py  test_random_forest.py  test_svm.py  test_xgboost.py
